fixed blurs and layout on mobile view, touched up skills scroll

--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -8,7 +8,7 @@
     align-items: center;
     margin-top: 10%;
     /*background-image: radial-gradient(rgba(201,162,39,0.12) 1px, transparent 1px);
-    background-size: 22px 22px;*/
+    background-size: 22px 22px; */
     /*clip-path: inset(-100vh -100vw 0px -100vw);*/
 }
 
@@ -23,7 +23,7 @@
     border-radius: 764px;
     background: #BAA5D9;
     z-index: 0;
-    opacity: 0.15;
+    opacity: 0.1;
     filter: blur(100px);
 }
 
@@ -38,7 +38,7 @@
     border-radius: 764px;
     background: #BAA5D9;
     z-index: 0;
-    opacity: 0.15;
+    opacity: 0.1;
     filter: blur(100px);
 }
 
